--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -19,11 +19,16 @@
 }
 
 .navigation {
-  list-style-type: none;
-  margin: 0;
+  list-style: none;
   padding: 0;
+  margin: 0;
   display: flex;
-  gap: 1rem;
+  align-items: center;
+  gap: 20px;
+}
+
+.navigationLink {
+  padding-top: 25px;
 }
 
 .navigation li a {
