--- a/app/(private routes)/notes/filter/[...slug]/NotesPage.module.css
+++ b/app/(private routes)/notes/filter/[...slug]/NotesPage.module.css
@@ -1,8 +1,6 @@
 .app {
-  width: 90%;
-  max-width: 1280px;
-  margin: 0px auto;
-  padding: 0 16px 16px;
+  margin: 0 auto;
+  padding: 0 20px 16px;
   flex: 1;
 }
 
@@ -29,4 +27,11 @@
 
 .button:hover {
   background-color: #0b5ed7;
+}
+
+.modalTitle {
+  font-size: 1.8rem;
+  margin-bottom: 20px;
+  color: #333;
+  text-align: center;
 }
